Fixed icon alignment
Edited class with weather icon to realign, added farenheit link

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Montserrat", sans-serif;
-  background-color: #f4f9f9;
+  background-color: #a6fcfc;
 }
 h1 {
   margin-top: 40px;
@@ -20,8 +20,9 @@ p {
 
 li {
   font-size: 15px;
-  padding-top: 5px;
+  padding-top: 10px;
   list-style: none;
+ 
 }
 
 li:first-letter {
@@ -35,10 +36,14 @@ li:first-letter {
 
 .navigationBar {
   display: block;
-  background-color: #ccf2f4;
+  background-color: #89e6eb;
   padding: 10px;
   border-radius: 4px;
   width: 325px;
+}
+
+.the-temperature {
+    font-size: 35px;
 }
 
 .thisWeek {
@@ -47,7 +52,7 @@ li:first-letter {
 }
 
 .card {
-  background-color: #a4ebf3;
+  background-color: #6ddce9;
 }
 
 .card-title {
